修改了首页和single布局

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -36,9 +36,10 @@
 
 <!-- Category Post -->
 
+{{- range .Site.Taxonomies.categories.ByCount }}
 <section class="mb-16">
 
-    {{ $cat := "astronomy" }}
+    {{ $cat := .Name }}
 
     <div class="flex items-center mb-6">
 
@@ -49,7 +50,7 @@
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-x-6 gap-y-10">
 
-    {{ range where .Site.RegularPages "Params.categories" "intersect" (slice $cat ) | first 3 }}
+    {{ range where $.Site.RegularPages "Params.categories" "intersect" (slice $cat ) | first 3 }}
 
       {{- partial "content/card" . -}}
 
@@ -58,6 +59,8 @@
     </div>
 
   </section>
+
+{{- end }}
 
 <!-- / End category post --> 
 <hr class="my-8">
@@ -73,7 +76,7 @@
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-x-6 gap-y-10">
 
-    {{ $paginator := .Paginate ( where site.RegularPages "Type" "in" site.Params.mainSections) }}
+    {{ $paginator := .Paginate ( where site.RegularPages "Type" "in" site.Params.mainSections) 9 }}
 
     {{ range $paginator.Pages }}
 
