--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,10 +14,9 @@
       </a>
 
       <p class="font-semibold">
-        Write with love. Minimalism design.<br>Clean code and built in Rembele, Gayo Highland.
+        文森的科技博客<br>基于Hugo博客系统和Pehtheme主题构建。
       </p>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. At nulla, dolorum cumque ad. Officia voluptas excepturi distinctio maiores reiciendis minima aliquid aspernatur. Ullam tenetur saepe debitis, libero, in rerum vero?</p>
 
     </div>
 
