--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,31 +15,41 @@
 
       </div>
       
-      <div id="writer" class="flex items-center space-x-4">
+      <div id="writer" class="flex flex-col space-y-4">
 
-        {{- $name := .Site.Params.Author.name -}}
+        <div class="flex items-center space-x-4">
 
-        {{- with $avatar := resources.Get .Site.Params.Author.avatar }}
+          {{- $name := .Site.Params.Author.name -}}
 
-        <img class="w-12 h-12 bg-black rounded-full" src="{{ $avatar.Permalink }}" alt="{{ $name }} avatar" width="{{ $avatar.Width }}" height="{{ $avatar.Height }}">
+          {{- with $avatar := resources.Get .Site.Params.Author.avatar }}
 
-        {{ end -}}
-        
-        <ul class="flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
+          <img class="w-12 h-12 bg-black rounded-full" src="{{ $avatar.Permalink }}" alt="{{ $name }} avatar" width="{{ $avatar.Width }}" height="{{ $avatar.Height }}">
+
+          {{ end -}}
           
-          <li class="font-semibold my-2">{{ .Site.Params.Author.name }}</li>
-          
-          <li class="before:content-['•'] before:mr-2 before:opacity-50 my-2">
-            {{- $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" -}}
-            {{- $dateHuman := .Date | time.Format ":date_long" -}}
-            <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
-          </li>
+          <ul class="flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
+            
+            <li class="font-semibold my-2">{{ .Site.Params.Author.name }}</li>
+            
+            <li class="before:content-['•'] before:mr-2 before:opacity-50 my-2">
+              {{- $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" -}}
+              {{- $dateHuman := .Date | time.Format ":date_long" -}}
+              <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+            </li>
 
-          <li class="before:content-['•'] before:mr-2 before:opacity-50 my-2">
-            {{ .ReadingTime }} min read
-          </li>
+            <li class="before:content-['•'] before:mr-2 before:opacity-50 my-2">
+              {{ .ReadingTime }} min read
+            </li>
 
-        </ul>
+          </ul>
+
+        </div>
+
+        <!-- Categories -->
+        {{- partial "terms.html" (dict "taxonomy" "categories" "page" .) -}}
+
+        <!-- Tags -->
+        {{- partial "terms.html" (dict "taxonomy" "tags" "page" .) -}}
 
       </div>
       
@@ -74,10 +84,6 @@
       <!-- Content -->
 
       {{- .Content -}}
-
-      <!-- Tags list -->
-
-      {{- partial "terms.html" (dict "taxonomy" "tags" "page" .) -}}
 
     </div>
 
