修改了首页recent posts显示的数量改为6，list-post省略图改成fit自适应

--- a/layouts/partials/content/list-post.html
+++ b/layouts/partials/content/list-post.html
@@ -11,7 +11,7 @@
 		  {{- else }}
 
 			{{- with $imglist := resources.Get .Params.image -}}
-			  {{- $imglist := $imglist.Crop "250x250 Center" -}}
+			  {{- $imglist := $imglist.Fit "250x250 Center" -}}
 			  <img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="{{ $imglist.Permalink }}" alt="{{ $.Name }}" width="{{ $imglist.Width }}" height="{{ $imglist.Height }}">
 			{{- end }}
 
