修改了首页的订阅，以及评论系统从Disqus改为giscus

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -93,9 +93,12 @@
 
         <h2 class="text-xl font-semibold">Comment</h2>
 
-        <p>Disqus comment here</p>
-
-        {{- /* template "_internal/disqus.html" . */ -}}
+        {{- $provider := default "" .Site.Params.comments.provider -}}
+        {{- if eq $provider "giscus" -}}
+          {{- partial "comments/giscus.html" . -}}
+        {{- else -}}
+          <p>Disqus comment here</p>
+        {{- end -}}
 
       </div>
 
