--- a/layouts/partials/content/newsletter.html
+++ b/layouts/partials/content/newsletter.html
@@ -4,9 +4,9 @@
 
 		<div class="w-full md:w-3/5 lg:pr-10 text-white">
 
-			<h3 class="text-2xl font-semibold mb-4">Stay In The Loop! Subscribe to Our Newsletter.</h3>
+			<h3 class="text-2xl font-semibold mb-4">欢迎订阅我们的文章。</h3>
 
-			<p>Join our community of enthusiasts and stay informed. Just enter your email below, and we'll make sure you're always in the know!</p>
+			<p>加入我们的社区，只需在下面输入您的电子邮件，我们将确保您始终了解最新动态！</p>
 
 		</div>
 
