--- a/layouts/partials/content/aside-banner.html
+++ b/layouts/partials/content/aside-banner.html
@@ -1,7 +1,7 @@
-<div class="rounded-2xl p-4 bg-zinc-100 mb-10">
+<div class="rounded-2xl border border-transparent p-4 bg-zinc-100 mb-10 dark:border-zinc-800 dark:bg-zinc-900">
 
 		<img class="aspect-video rounded" src="/images/email-3249062_1280_by-Muhammad-Ribkhan-Pixabay.jpg" alt="Banner Email Marketing">
 
-		<p class="text-right text-xs mt-2 leading-none text-zinc-500">Adversitiment</p>
+		<p class="text-right text-xs mt-2 leading-none text-zinc-500 dark:text-zinc-400">Adversitiment</p>
 
 </div>
