--- a/layouts/partials/content/card.html
+++ b/layouts/partials/content/card.html
@@ -1,4 +1,4 @@
-<article class="relative group bg-zinc-100 hover:bg-blue-100 rounded-3xl">
+<article class="relative group border border-zinc-200 bg-zinc-100 hover:bg-blue-100 rounded-3xl transition-colors dark:border-zinc-800 dark:bg-zinc-900 dark:hover:bg-blue-950">
 	
 	<a class="insert-link" href="{{ .Permalink }}"></a>
 
