--- a/layouts/partials/content/list-post.html
+++ b/layouts/partials/content/list-post.html
@@ -1,6 +1,6 @@
-<article class="relative group flex flex-row">
+<article class="relative group flex flex-row border border-transparent dark:border-zinc-800">
 	<a class="insert-link" href="{{ .Permalink }}"></a>
-	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100">
+	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100 dark:bg-zinc-900">
 
 		{{- if .Params.image }}
 
