--- a/layouts/partials/content/newsletter.html
+++ b/layouts/partials/content/newsletter.html
@@ -1,4 +1,4 @@
-<div class="max-w-7xl mx-auto my-16 rounded-3xl bg-blue-500">
+<div class="max-w-7xl mx-auto my-16 rounded-3xl bg-blue-500 text-white shadow-lg shadow-blue-500/20 dark:bg-blue-600">
 	
 	<div class="flex flex-wrap p-6 lg:p-10 space-y-6 lg:space-y-0">
 
@@ -16,9 +16,9 @@
 
 			<form class="block lg:flex space-y-6 lg:space-y-0 lg:space-x-4">
 
-				<input class="w-full lg:w-3/5 px-6 py-2 rounded-full" type="text" placeholder="Email...">
+				<input class="w-full lg:w-3/5 px-6 py-2 rounded-full border border-transparent bg-white text-zinc-900 placeholder:text-zinc-500 focus:border-white focus:outline-none dark:border-zinc-700 dark:bg-zinc-900 dark:text-white dark:placeholder:text-zinc-400" type="email" name="email" placeholder="Email...">
 
-				<button class="w-full lg:w-2/5 px-6 py-2 rounded-full bg-white">Subscribe</button>
+				<button class="w-full lg:w-2/5 px-6 py-2 rounded-full bg-white text-zinc-900 shadow-sm transition-colors hover:bg-zinc-100 dark:bg-white/90 dark:text-zinc-900 dark:hover:bg-white">Subscribe</button>
 
 			</form>
 		</div>
